# jot-notetaker-cli

./: .gitignore  README.md  jot.py  pyproject.toml  styles.tcss  tui.py
.mimocode/plans/: 1781369506140-sunny-wizard.md
